@@ -1,0 +1,4 @@
+This iteration adds funcitonality for PC inventory and object pickup. 
+I have changed the description code to only allow object names with a of max
+number of characters, makes printing object names easier. Max length of object
+name is x. Pickup items by pressing ',' (or something).
