@@ -57,3 +57,7 @@ is.
 (11/11) Created equip_object and carry_object method
 (11/12) Start implementing equip and carry methods
 (11/12) Finished equip, need to test
+(11/13) Begin writing for printing inventories
+(11/14) Need to finish printing inventories, need to rewrite descriptions to
+    limit object name length to max number of chars
+(11/14) Need to work on picking up items to test inventory printing, implementing now
